--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,7 +11,7 @@ html {
 
 body {
   margin-bottom: 0px;
-  background-color: white;
+  background-color: rgba(230, 223, 165, 0.76)
 }
  
 #img1 {
@@ -185,6 +185,11 @@ ul{
 }
   
 footer{
+ 
+  width:100%; 
+  position:absolute; 
+  bottom:0; 
+  left:0; 
   background-color: #24262b;
 }
   
